--- a/dtc-travel-app/dtc-travel-app/Info.plist
+++ b/dtc-travel-app/dtc-travel-app/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>The Travel App would like access to your camera so you can document your travel experience through photos!</string>
 </dict>
 </plist>
